--- a/exercise.html
+++ b/exercise.html
@@ -18,17 +18,21 @@
 //        var max =(x>y)?x:y;
 //        console.log(max);
 
-        var today = new Date();
-        var year = today.getFullYear();
-            console.log(year);
-            if(year % 400 == 0){
-                console.log(year + "年是闰年");
-            }else if(year % 4==0 && year % 100 !==0){
-                console.log(year + "年是闰年");
-            }else{
-                console.log(year + "年不是闰年")
-            }
-
+//        var today = new Date();
+//        var year = today.getFullYear();
+//            console.log(year);
+//            if(year % 400 == 0){
+//                console.log(year + "年是闰年");
+//            }else if(year % 4==0 && year % 100 !==0){
+//                console.log(year + "年是闰年");
+//            }else{
+//                console.log(year + "年不是闰年")
+//            }
+        var i,num=1;
+        for(i = 10;i>1;i--){
+            num = num * i;
+        }
+    console.log(num);
     </script>
 </body>
 </html>
