--- a/exercise.html
+++ b/exercise.html
@@ -64,12 +64,31 @@
 //          case 6: alert("今天是星期六");break;
 //          default:alert("输入有误");break;
 //      }
-        var j = 1,sum = 0;
-        for(var i = 1;i <=10; i++){
-            j = j * i;
-            sum =sum + j;
-        }
-        document.write(sum);
+//        var j = 1,sum = 0;
+//        for(var i = 1;i <=10; i++){
+//            j = j * i;
+//            sum =sum + j;
+//        }
+////        document.write(sum);
+//        var i,line;
+//        for(line=1;line <= 5;line++){
+//            for(i = 1;i<= line;i++){
+//                document.write(" ")
+//                document.write("*");
+//            }
+//            document.write("</br>")
+//        }
+//        for (var x = 100;x<= 999;x++){
+//            if((x % 4 ==2 && x % 7 == 3 && x % 9 ==5 )) {
+//                document.write(x);
+//                document.write("<br>");
+//            }
+//        }
+//            var number = 1000;
+//
+//            for(number = 1000;number <= 9999;number++){
+//
+//            }
 
 
 
