--- a/exercise.html
+++ b/exercise.html
@@ -120,29 +120,54 @@
 
          equation();
 */
-         function min(){
-         var number = prompt("请输入两个数，以空格隔开");
-         var number1 = number.split(" ");
-         var x = number1[0];
-         var y = number1[1];
-         var min1 = (x>y)?y:x;
-         console.log(min1);
-         }
+//         function min(){
+//         var number = prompt("请输入两个数，以空格隔开");
+//         var number1 = number.split(" ");
+//         var x = number1[0];
+//         var y = number1[1];
+//         var min1 = (x>y)?y:x;
+//         console.log(min1);
+//         }
+//
+//         min();
+//
+//
+//
+//         var a,sum = 0;
+//         for(a = 1;a <= 1000;a++) {
+//             if (a % 3 == 0 && a % 5 == 0 && a % 7 == 0) {
+//                 document.write(a + " ");
+//                 sum++;
+//                 if (sum % 6 == 0) {
+//                     <!--document.write("<br>");-->
+//                 }
+//             }
+//         }
 
-         min();
+    //            var factorial =function(x){
+    //                var j = 1;
+    //                for(var i = 1;i < x;i++){
+    //                    j = j * i;
+    //                }
+    //                return j;
+    //            }
+    //            document.write("12!-10! =" +(factorial(12)- factorial(10)));
+
+            var  print = function (x) {
+                for(var line = 1;line <=x;line++){
+                    for(var i = 1;i<= line;i++){
+                        document.write("*"+" ");
+                    }
+                    document.write("<br>");
+                }
+            }
+
+            print(5);
 
 
 
-         var a,sum = 0;
-         for(a = 1;a <= 1000;a++) {
-             if (a % 3 == 0 && a % 5 == 0 && a % 7 == 0) {
-                 document.write(a + " ");
-                 sum++;
-                 if (sum % 6 == 0) {
-                     <!--document.write("<br>");-->
-                 }
-             }
-         }
+
+
 
 
 
