--- a/exercise.html
+++ b/exercise.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-        <script>
+        <script language="JavaScript">
 //        var c = "123abe" - "123"
 //        document.write(c);
 //        var d;
@@ -153,16 +153,39 @@
     //            }
     //            document.write("12!-10! =" +(factorial(12)- factorial(10)));
 
-            var  print = function (x) {
-                for(var line = 1;line <=x;line++){
-                    for(var i = 1;i<= line;i++){
-                        document.write("*"+" ");
-                    }
-                    document.write("<br>");
-                }
+//           var  print = function (x) {
+//               for (var line = 1; line <= x; line++) {
+//                   document.write("　　");
+//                   for (var j = 1; j <= (x - line); j++) {
+//                       document.write("　");
+//                   }
+//                   for ( j = 1; j <= line; j++) {
+//                           document.write("*" +" ");
+//                   }
+//                   document.write("<br>");
+//
+//               }
+//           }
+//            print(5);
+//
+//                var i,line;
+//                for(line=1;line<=5;line++)
+//                {
+//                    document.write("　　　");
+//                    for(i=1;i<=5-line;i++) document.write("　");
+//                    for(i=1;i<=line;i++)
+//                    {
+//                        document.write("*");
+//                        if (i>0) document.write(" ");
+//                    }
+//                    document.write("<br>");
+//                }
+
+            var f1 = 1,f2 = 1,n;
+            for(var f3 = 2;f3 <= n;f3++){
+
             }
 
-            print(5);
 
 
 
@@ -174,9 +197,6 @@
 
 
 
-
-
-
-       </script>
+        </script>
 </body>
 </html>
