--- a/exercise.html
+++ b/exercise.html
@@ -255,21 +255,39 @@
 //                CollectDigits();
 
 
-            var CollectDigits = function(){
-                var s = prompt("请输入一串字符串");
-                var result = "";
-                for(var i = 0;i < s.length;i++){
-                    var ch = s.charAt(i);
-                    if(ch >= "0" && ch <= "9"){
-                        result = result + ch;
+//            var CollectDigits = function(){
+//                var s = prompt("请输入一串字符串");
+//                var result = "";
+//                for(var i = 0;i < s.length;i++){
+//                    var ch = s.charAt(i);
+//                    if(ch >= "0" && ch <= "9"){
+//                        result = result + ch;
+//                    }
+//                    console.log(result);
+//                }
+//
+//            }
+//            CollectDigits();
+
+
+
+            function CollectGrade() {
+                var s =prompt("请输入七科成绩，以空格隔开");
+                var grade = s.split(" ");
+                var sum = parseInt(grade[0])+parseInt(grade[1])+parseInt(grade[2])+parseInt(grade[3])+parseInt(grade[4])+parseInt(grade[5])+parseInt(grade[6]);
+                var average = sum / 7;
+                console.log(sum);
+                console.log(average);
+                for(var i = 0;i < grade.length;i++){
+                    var grade1 = grade[i];
+                    if(grade1 < 60){
+                        console.log(grade1);
                     }
-                    console.log(result);
                 }
 
             }
-            CollectDigits();
 
-
+                CollectGrade();
 
 
 
