--- a/exercise.html
+++ b/exercise.html
@@ -289,32 +289,39 @@
 //
 //                CollectGrade();
 
-            var obj = {
-                checkname:function (name) {
-                    if(name == "hujihui")
-                        return name;
-                },
-                checkpassword:function (password) {
-                    if(password == "123456")
-                        return password;
+//            var obj = {
+//                checkname:function (name) {
+//                    if(name == "hujihui")
+//                        return name;
+//                },
+//                checkpassword:function (password) {
+//                    if(password == "123456")
+//                        return password;
+//                }
+//            }
+//            var a = prompt("请输入您的用户名");
+//            if(obj.checkname(a));
+//            console.log(a);
+//            var b = prompt("请输入您的密码");
+//            if(obj.checkpassword(b));
+//            console.log(b);
+
+
+//            var a = 0;
+//            console.log(Boolean(a));
+
+//            var text = "this is the letter sigma: \u03a3.";
+//            alert(text.length);
+
+            var Fab = function(n){
+                if(n < 3){
+                    return 1;
+                }else{
+                    return Fab(n-1) + Fab(n - 2);
                 }
             }
-            var a = prompt("请输入您的用户名");
-            if(obj.checkname(a));
-            console.log(a);
-            var b = prompt("请输入您的密码");
-            if(obj.checkpassword(b));
-            console.log(b);
-
-
-
-
-
-
-
-
-
-
+            var n = parseInt(prompt("请输入n的值"));
+            console.log(Fab(n));
 
 
 
