--- a/exercise.html
+++ b/exercise.html
@@ -298,6 +298,7 @@
 //                    if(password == "123456")
 //                        return password;
 //                }
+
 //            }
 //            var a = prompt("请输入您的用户名");
 //            if(obj.checkname(a));
@@ -313,11 +314,21 @@
 //            var text = "this is the letter sigma: \u03a3.";
 //            alert(text.length);
 
-            var Fab = function(n){
-                if(n < 3){
+//            var Fab = function(n){
+//                if(n < 3){
+//                    return 1;
+//                }else{
+//                    return Fab(n-1) + Fab(n - 2);
+//                }
+//            }
+            var Fab= function(n){
+                var sub,f1 = 1,f2 = 1;
+                if(n == 1||n == 2){
                     return 1;
                 }else{
-                    return Fab(n-1) + Fab(n - 2);
+                    for(var i = 3;i <= n;i++){
+
+                    }
                 }
             }
             var n = parseInt(prompt("请输入n的值"));
