--- a/exercise.html
+++ b/exercise.html
@@ -327,6 +327,7 @@
                     return 1;
                 }else{
                     for(var i = 3;i <= n;i++){
+                        sub = f1 +f2;
 
                     }
                 }
