--- a/exercise.html
+++ b/exercise.html
@@ -321,21 +321,7 @@
 //                    return Fab(n-1) + Fab(n - 2);
 //                }
 //            }
-            var Fab= function(n){
-                var sub,f1 = 1,f2 = 1;
-                if(n == 1||n == 2){
-                    return 1;
-                }else{
-                    for(var i = 3;i <= n;i++){
-                        sub = f1 +f2;
-//
-//
 
-                    }
-                }
-            }
-            var n = parseInt(prompt("请输入n的值"));
-            console.log(Fab(n));
 //
 
 
@@ -343,12 +329,19 @@
 
 
 
+//    var person = {
+//        name:"zhangsan",
+//        age:20
+//    }
+//    var person1 = person;
+//    person1.name = "lisi";
+//    console.log(person.name);
 
+        var aa = function(a,b){
+            console.log(arguments);
+        }
 
-
-
-
-
+    aa(1,2,3    );
 
 
         </script>
