--- a/exercise.html
+++ b/exercise.html
@@ -329,19 +329,19 @@
 
 
 
-//    var person = {
-//        name:"zhangsan",
-//        age:20
-//    }
-//    var person1 = person;
-//    person1.name = "lisi";
-//    console.log(person.name);
+    var person = {
+        name:"zhangsan",
+        age:20
+    }
+    var person1 = person;
+    person1.name = "lisi";
+    console.log(person.name);
 
         var aa = function(a,b){
             console.log(arguments);
         }
 
-    aa(1,2,3    );
+    aa(1,2,3 );
 
 
         </script>
