--- a/exercise.html
+++ b/exercise.html
@@ -69,6 +69,12 @@
 //            j = j * i;
 //            sum =sum + j;
 //        }
+//          function fac(n){
+//              if(n == 1){
+//                 return 1;
+//           }
+//             return n * fac(n-1);
+//           }
 ////        document.write(sum);
 //        var i,line;
 //        for(line=1;line <= 5;line++){
@@ -89,7 +95,26 @@
 //            for(number = 1000;number <= 9999;number++){
 //
 //            }
+       /*     function feibo(n) {
+                if(n == 1 || n == 2){
+                    return 1;
+                }else{
+                    return feibo(n-1) + feibo(n -2);
+                }
+            }
 
+            function output() {
+                var sum = 0;
+                for (var k = 40; k >= 1; k--) {
+                    document.write(feibo(k)+"&nbsp");
+                    sum++;
+                    if (sum % 6 == 0) {
+                        document.write("<br>")
+                    }
+                }
+
+            }
+            output();*/
 
     //            var x = 8;
     //            function aa(){
@@ -99,27 +124,29 @@
     //            aa();
     //                console.log(x);
 
-        /*	var a,b,c,x;
-         for(x=1000;x<=9999;x++){
-         a = Math.floor(x/1000);
-         x = x%1000;
-         b = Math.floor(x/100);
-         x = x % 100;
-         c = Math.floor(x/10);
-         x = x + b*100 + a*1000;
-         if(a == (b+c) && x % 13 == 0){
-         console.log(x);
-         }
-         }
+//        	var a,b,c,x,sum=0;
+//         for(x=1000;x<=9999;x++){
+//         a = Math.floor(x/1000);
+//         x = x%1000;
+//         b = Math.floor(x/100);
+//         x = x % 100;
+//         c = Math.floor(x/10);
+//         x = x + b*100 + a*1000;
+//         if(a == (b+c) && x % 13 == 0){
+//         document.write(x+"&nbsp");
+//         sum++;
+//         }
+//         }
+//        console.log(sum);
 
-         function equation( ){
-         var x =prompt("请输入x的值");
-         var y = 4 * x * x + 3 * x + 2;
-         console.log(y);
-         }
-
-         equation();
-*/
+//         function equation( ){
+//         var x =prompt("请输入x的值");
+//         var y = 4 * x * x + 3 * x + 2;
+//         console.log(y);
+//         }
+//
+//         equation();
+//*/
 //         function min(){
 //         var number = prompt("请输入两个数，以空格隔开");
 //         var number1 = number.split(" ");
@@ -155,9 +182,9 @@
 
 //           var  print = function (x) {
 //               for (var line = 1; line <= x; line++) {
-//                   document.write("　　");
+//                   document.write("&nbsp&nbsp");
 //                   for (var j = 1; j <= (x - line); j++) {
-//                       document.write("　");
+//                       document.write("&nbsp");
 //                   }
 //                   for ( j = 1; j <= line; j++) {
 //                           document.write("*" +" ");
@@ -167,7 +194,15 @@
 //               }
 //           }
 //            print(5);
-//
+           /* var arr = [[1,2,3],[4,5,6],[7,8,9]];
+           for(var i = 0;i < arr.length;i++){
+               for(var j = 0; j < arr.length;j++){
+                   document.write(arr[i][j]);
+                   document.write("&nbsp&nbsp ");
+               }
+           }*/
+
+
 //                var i,line;
 //                for(line=1;line<=5;line++)
 //                {
@@ -321,7 +356,20 @@
 //                    return Fab(n-1) + Fab(n - 2);
 //                }
 //            }
-
+            function Fab(n){
+                var f1 = 1,f2 = 2,sub ;
+                if(n == 1||n == 2){
+                    return 1;
+                }else{
+                    for(var i = 3;i <= n;i++){
+                        sub = f1 + f2;
+                        f1 = f2;
+                        f2 = sub;
+                    }
+                    return sub;
+                }
+            }
+            console.log(Fab(6));
 //    var person = {
 //        name:"zhangsan",
 //        age:20
@@ -335,10 +383,15 @@
 //        }
 //
 //    aa(1,2,3 );
-        function isLeap(year){
-            return ((year % 4 == 0 && year % 100 != 0)|| year % 400 == 0);
-        }
-        console.log(isLeap(2000));
+//        function isLeap(year){
+//            return ((year % 4 == 0 && year % 100 != 0)|| year % 400 == 0);
+//        }
+//        var date = new Date();
+//        var year = date.getFullYear();
+//        console.log(isLeap(year)?"今年是闰年":"今年不是闰年");
+
+
+
         </script>
 </body>
 </html>
