--- a/object.html
+++ b/object.html
@@ -6,9 +6,13 @@
 </head>
 <body>
     <script>
-        var obj = new Object();
-        obj.name = "hujihui";
-        console.log(obj.name);
+     var person = {
+         name:"mike",
+         age:29
+     };
+     var proname = "name";
+     alert(person[proname]);
+
 
 
 
