--- a/object.html
+++ b/object.html
@@ -6,14 +6,39 @@
 </head>
 <body>
     <script>
-     var person = {
+    /* var person = {
          name:"mike",
          age:29
      };
      var proname = "name";
-     alert(person[proname]);
+     alert(person[proname]);*/
+   /* function employee(name,job,born)
+    {
+        this.name=name;
+        this.job=job;
+        this.born=born;
+    }
 
+    var bill=new employee("Bill Gates","Engineer",1985);
 
+    bill.salary=20000;
+
+    document.write(bill.salary);*/
+    /*var aa = "12345";
+    var bb = "45677";
+    console.log(aa.concat(bb));*/
+
+    var arr = new Array("19",20,"25","35","44","56");
+    arr.push(arr[1]);
+    console.log(arr);
+    //console.log(arr.join(".."));
+   // console.log(arr.pop());
+    //console.log(arr);
+    //console.log(arr.push("96"));
+       /* function sortNumber(a,b){
+            return a - b;
+        }
+        console.log(arr.sort(sortNumber));*/
 
 
     </script>
