--- a/object.html
+++ b/object.html
@@ -34,7 +34,7 @@
            return arr1;
        }
        console.log(add("35"));*/
-      function aa(item){
+     /* function aa(item){
           for(var i = 0;i < arr.length;i++){
               if(arr[i] == item){
                 arr.splice(i,1);
@@ -42,7 +42,16 @@
           }
           return arr;
       }
-      console.log(aa("20"));
+      console.log(aa("20"));*/
+     function multiplication(){
+         for(var i = 1;i <= 9;i++){
+             for(var j = 1;j <= i;j++){
+                 document.write(i+"*"+j+"="+i*j+"&nbsp&nbsp");
+             }
+             document.write("<br/>");
+         }
+     }
+     multiplication();
       /*function move(item){
           for(var i = 0;i < arr.length;i++){
               if(arr[i] == item){
