--- a/practice.html
+++ b/practice.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script>
+<script>/*
     var arr1 = new Array("15","15","34","53","32","54");
     var arr2 = new Array();
     for(var  i = 0;i <arr1.length;i++){
@@ -18,7 +18,8 @@
 
             }
         }
-    }
+    }*/
+
 </script>
 </body>
 </html>
