--- a/回到顶部.html
+++ b/回到顶部.html
@@ -33,7 +33,7 @@
                     window.scrollTo(0,iScrollTop *= 0.6);
                     console.log(iScrollTop);
                     if(iScrollTop <= 1){
-                        clearInterval(timer);
+//                        clearInterval(timer);
 //
                     }
 //
