--- a/practice.html
+++ b/practice.html
@@ -5,7 +5,21 @@
     <title>Title</title>
 </head>
 <body>
-    <!---->
+<script>
+    //给定字符串 str，检查其是否包含数字，包含返回 true，否则返回 false
+    function check(str){
+        for(var i = 0;i < str.length;i++){
+            if(parseInt(str[i])){
+                console.log(str[i]);
+                return true;
+            }
+        }
+        return false;
+    }
+    check("hu2jihui");
+
+
+</script>
 
 
 </body>
