--- a/practice.html
+++ b/practice.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     //给定字符串 str，检查其是否包含数字，包含返回 true，否则返回 false
-    function check(str){
+    /*function check(str){
         for(var i = 0;i < str.length;i++){
             if(parseInt(str[i])){
                 console.log(str[i]);
@@ -16,7 +16,15 @@
         }
         return false;
     }
-    check("hu2jihui");
+    check("hu2jihui");*/
+    //给定字符串 str，检查其是否包含连续重复的字母（a-zA-Z），包含返回 true，否则返回 false。
+    function checkReaptLetter(){
+        for(var i = 0;i < str.length;i++){
+
+
+        }
+    }
+
 
 
 </script>
