--- a/practice.html
+++ b/practice.html
@@ -19,7 +19,7 @@
     check("hu2jihui");*/
     //给定字符串 str，检查其是否包含连续重复的字母（a-zA-Z），包含返回 true，否则返回 false。
     //找出数组 arr 中重复出现过的元素
-    var arr = [15,28,36,47,38,40];
+    /*var arr = [15,28,36,47,38,40];
     var arr1 = arr;
     var sum = 0;
     function checkReaptItem(arr){
@@ -38,7 +38,12 @@
         }
 
     }
-    console.log(checkReaptItem(arr));
+    console.log(checkReaptItem(arr));*/
+
+
+    var arr = [15,28,36,47,38,40];
+    console.log(arr.splice(1,1,34));
+    console.log(arr);
 
 
 </script>
