--- a/计时器.html
+++ b/计时器.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-   function add(start,end){
+   /*function add(start,end){
         var timer = setInterval(function(){
             console.log(start++);
             if(start < end){
@@ -21,7 +21,11 @@
         },100)
 
     }
-    add(1,100);
+    add(1,100);*/
+   timer1 = setTimeout(function(){
+       console.log(Math.random());
+       
+       },500)
 </script>
 </body>
 </html>
