--- a/右键菜单.html
+++ b/右键菜单.html
@@ -14,6 +14,9 @@
             border: 1px solid #cccccc;
             border-radius: 5px;
             padding: 5px 0px;
+            position: absolute;
+            left: 0px;
+            top: 0px;
             display: none;
         }
         #ul1 li{
@@ -24,7 +27,8 @@
             font-size: 12px;
         }
         #ul1 li:hover{
-            background: dodgerblue;
+            cursor: pointer;
+            background: lightskyblue;
         }
     </style>
 </head>
@@ -42,12 +46,11 @@
     var oUl= document.getElementById("ul1");
     console.log(oUl);
     document.oncontextmenu = function(e){
+   /*     e = e || window.event;*/
         oUl.style.display = "block";
-        oUl.style.left = e.clientX;
-        oUl.style.top = e.clientY;
-
+        oUl.style.left = e.clientX + "px";
+        oUl.style.top = e.clientY + "px";
         return false;
-
     }
 
 
