--- a/选项卡.html
+++ b/选项卡.html
@@ -4,33 +4,69 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        #div1{
-            height: 200px;
-            width: 200px;
-            border: 1px solid black;
-            background: transparent;
+        *{
+            margin:0;
+            padding: 0px;
+        }
+        #container{
+            position: absolute;
+            left: 400px;
+            top: 250px;
+        }
+        #ul1{
+
+        }
+        #ul1 li{
+            width: 180px;
+            height: 30px;
+            line-height: 30px;
+            float: left;
+            list-style: none;
+            text-align: center;
+            border: 1px solid #cccccc;
+            cursor: pointer;
+        }
+        #ul1 .selected{
+            background: #cccccc;
+        }
+        #div1 div{
+            width: 544px;
+            height: 300px;
+            border: 1px solid #cccccc;
+            display: none;
+        }
+        #div1 .active{
+            display: block;
         }
     </style>
 </head>
 <body>
-    <input type="button" value="变黄" id="color1">
-    <input type="button" value="变绿" id="color2">
-    <input type="button" value="变红" id="color3">
-        <div id="div1"></div>
+<div id="container">
+    <ul id="ul1">
+        <li class="selected">11</li>
+        <li>22</li>
+        <li>33</li>
+    </ul>
+    <div id="div1">
+        <div class="active">aaa</div>
+        <div>bbb</div>
+        <div>ccc</div>
+    </div>
+</div>
 <script>
-    var button1 = document.getElementById("color1");
-    console.log(button1);
-    var button2 = document.getElementById("color2");
-    var button3 = document.getElementById("color3");
-    var div11 = document.getElementById("div1");
-    button1.onclick = function(){
-        div11.style.backgroundColor = "yellow";
-    }
-    button2.onclick = function(){
-        div11.style.backgroundColor = "green";
-    }
-    button3.onclick = function(){
-        div11.style.backgroundColor = "red";
+    var aLi = document.getElementsByTagName("li");
+    var oDiv1 = document.getElementById("div1");
+    var aDiv = oDiv1.getElementsByTagName("div");
+    for(var i = 0;i < aLi.length;i++){
+        aLi[i].index = i;
+        aLi[i].onclick = function(){
+            for(var j = 0;j <aLi.length;j++){
+                aLi[j].className = "";
+                aDiv[j].className = "";
+            }
+                this.className = "selected";
+            aDiv[this.index].className = "active";
+        }
     }
 
 
