--- a/轮播图.html
+++ b/轮播图.html
@@ -66,7 +66,7 @@
 <body>
     <div id="container">
         <div id="img-box">
-            <img  class="selected" src="img/1.jpg" alt="">
+            <img class="selected" src="img/1.jpg" alt="">
             <img src="img/2.jpg" alt="">
             <img src="img/3.jpg" alt="">
             <img src="img/4.jpg" alt="">
@@ -95,8 +95,7 @@
 
             aLi[i].onmouseover = function () {
                 iNow = this.index;
-                changeImg(this.index)
-                //return iNow;
+                changeImg(this.index);
             }
         }
             oNext.onclick = function() {
