--- a/轮播图动画2.html
+++ b/轮播图动画2.html
@@ -78,7 +78,7 @@
     var prevImg;
         for(var i = 0;i < aLi.length;i++) {
             aLi[i].index = i;
-            //prevImg = aImg[this.index];
+            prevImg = aImg[i];
             for (var k = 0; k < aImg.length; k++) {
                 //prevImg = aImg[k];
                 aLi[i].onmouseover = function () {
