--- a/轮播图动画2.html
+++ b/轮播图动画2.html
@@ -78,9 +78,9 @@
     var prevImg;
         for(var i = 0;i < aLi.length;i++) {
             aLi[i].index = i;
-            prevImg = aImg[i];
+
             for (var k = 0; k < aImg.length; k++) {
-                //prevImg = aImg[k];
+                prevImg = aImg[k];
                 aLi[i].onmouseover = function () {
                     for (var j = 0; j < aLi.length; j++) {
                         aLi[j].className = "";
