--- a/照片墙/indedx.html
+++ b/照片墙/indedx.html
@@ -32,5 +32,18 @@
         <img src="images/8.jpg" alt="">
         <img src="images/9.jpg" alt="">
     </div>
+
+    <script>
+        var oContainer = document.getElementById("container");
+        var aImg = document.getElementsByTagName("img");
+        for(var i = 0;i < aImg.length;i++){
+            aImg[i].style.left = aImg[i].offsetLeft + "px";
+            aImg[i].style.top = aImg[i].offsetTop + "px";
+
+        }
+        for(var j = 0;j < aImg.length;j++){
+            aImg[j].style.position = "absolute";
+        }
+    </script>
 </body>
 </html>
