--- a/拖拽.html
+++ b/拖拽.html
@@ -22,15 +22,17 @@
         var oDiv = document.getElementById("div1");
         oDiv.onmousedown = function(e){
             e = e || window.event;
-
             var disX = e.clientX - oDiv.offsetLeft;
             var disY = e.clientY - oDiv.offsetTop;
-            oDiv.onmousemove = function(e){
+            document.onmousemove = function(e){
                 e = e || e.event;
                 var iLeft = e.clientX - disX;
                 var iTop = e.clientY - disY;
                 oDiv.style.left = iLeft + "px";
                 oDiv.style.top = iTop + "px";
+            }
+            oDiv.onmouseup = function(){
+                document.onmousemove = null;
             }
         }
 
